[gd_scene load_steps=6 format=3 uid="uid://cyikw003e0004"]

[ext_resource type="Script" uid="uid://8to4jfgtsuqu" path="res://scripts/base/buildings/building.gd" id="1_d7po0"]
[ext_resource type="Texture2D" uid="uid://brbrqtlh0exxd" path="res://assets/spritesTEST/64x64.png" id="2_qtlar"]
[ext_resource type="PackedScene" uid="uid://d0rqnrgndrvtl" path="res://scenes/base/production.tscn" id="3_rk7hg"]
[ext_resource type="Script" uid="uid://bcimb0y1wscsr" path="res://scripts/base/buildings/resource_producer.gd" id="4_tstyc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qtlar"]
size = Vector2(64, 64)

[node name="Wood" type="Area2D"]
script = ExtResource("1_d7po0")
footprint = Vector2i(2, 2)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qtlar")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qtlar")

[node name="CountdownLabel" type="Label" parent="."]
offset_left = -32.0
offset_top = -57.0
offset_right = 32.0
offset_bottom = -34.0
text = "00:00:00"
metadata/_edit_use_anchors_ = true

[node name="CostLabel" type="Label" parent="."]
visible = false
offset_left = -31.0
offset_top = 33.0
offset_right = 33.0
offset_bottom = 56.0
text = "00:00:00"
metadata/_edit_use_anchors_ = true

[node name="BuildTimer" type="Timer" parent="."]
one_shot = true

[node name="InfoMenu" type="PopupPanel" parent="."]
size = Vector2i(315, 210)

[node name="Label" type="Label" parent="InfoMenu"]
offset_left = 4.0
offset_top = 4.0
offset_right = 311.0
offset_bottom = 206.0
text = "Это дом"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LongPressTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Production" parent="." instance=ExtResource("3_rk7hg")]
script = ExtResource("4_tstyc")
resource_type = "wood"

[node name="Timer2" type="Timer" parent="Production"]
